--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -1,21 +1,29 @@
 ---
-- name: Disable master service
+- name: Disable services
   systemd:
     name: "{{ item }}"
     state: stopped
     enabled: no
+  failed_when: false
   with_items:
     - k3s
-  when: groups['master'] is defined and inventory_hostname in groups['master']
+    - k3s-node
 
-- name: Disable worker services
-  systemd:
-    name: "{{ item }}"
-    state: stopped
-    enabled: no
+- name: pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
+  register: pkill_containerd_shim_runc
+  command: pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
+  changed_when: "pkill_containerd_shim_runc.rc == 0"
+  failed_when: false
+
+- name: Umount k3s filesystems
+  include_tasks: umount_with_children.yml
   with_items:
-    - k3s-agent
-  when: groups['node'] is defined and inventory_hostname in groups['node']
+    - /run/k3s
+    - /var/lib/kubelet
+    - /run/netns
+    - /var/lib/rancher/k3s
+  loop_control:
+    loop_var: mounted_fs
 
 - name: Remove service files, binaries and data
   file:
@@ -23,7 +31,7 @@
     state: absent
   with_items:
     - "{{ systemd_dir }}/k3s.service"
-    - "{{ systemd_dir }}/k3s-agent.service"
+    - "{{ systemd_dir }}/k3s-node.service"
     - /etc/rancher/k3s
     - /var/lib/rancher/k3s
     - /var/lib/kubelet
