--- a/site.yml
+++ b/site.yml
@@ -4,8 +4,8 @@
   gather_facts: yes
   become: yes
   roles:
-    - { role: prereq }
-    - { role: download }
+    - { role: k3s/prereq }
+    - { role: k3s/download }
     - { role: raspberrypi }
 
 
