add pihole k8s app

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 roles_path = ./roles
 inventory  = ./hosts.ini
-
+vault_password_file =  $HOME/.ssh/ansible_vault
 remote_tmp = $HOME/.ansible/tmp
 local_tmp  = $HOME/.ansible/tmp
 pipelining = True
