--- a/site.yml
+++ b/site.yml
@@ -28,4 +28,5 @@
     K8S_AUTH_KUBECONFIG: /home/pi/.kube/config
   roles:
     - { role: k8s/pihole, tags: ["k8s","pihole"] }
-    - { role: k8s/rundeck, tags: ["k8s","rundeck"] } 
+    - { role: k8s/rundeck, tags: ["k8s","rundeck"] }
+    - { role: k8s/gitlab, tags: ["k8s","gitlab"] }
