--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: k3s-cluster
+- hosts: k3s_cluster
   gather_facts: yes
   become: yes
   roles:
@@ -21,12 +21,10 @@
   roles:
     - { role: k3s/node, tags: ["k3s"] }
 
-# deploy k8s apps
+## deploy k8s apps
 - hosts: master
   gather_facts: yes
-  environment:
-    K8S_AUTH_KUBECONFIG: /home/pi/.kube/config
   roles:
     - { role: k8s/pihole, tags: ["k8s","pihole"] }
-    - { role: k8s/rundeck, tags: ["k8s","rundeck"] }
-    - { role: k8s/gitlab, tags: ["k8s","gitlab"] }
+#    - { role: k8s/rundeck, tags: ["k8s","rundeck"] }
+#    - { role: k8s/gitlab, tags: ["k8s","gitlab"] }
